servicio unitario design

--- a/public/partials/service.html
+++ b/public/partials/service.html
@@ -2,6 +2,17 @@
 <div id="parallax-banner" class="service-banner">
 	<h2 class="service-title">Diseño</h2>
 </div>
+<div class="services">
+	
+	<figure class="service-container"  data-ng-repeat="servicio in $ctrl.service">
+		<img class="service-img" src="{{ servicio.img }}" alt="">
+		<figcaption class="service-caption">
+			<h3 class="service-title text-center">{{ servicio.title }}</h3>
+			<p class="paragraph">{{ servicio.description }}</p>
+		</figcaption>
+	</figure>
+
+</div>
 <!--<div class="services row row-content_column" data-ng-repeat="servicio in $ctrl.service">
 	
 	<figure id="design" class="service-container row-content">
@@ -12,7 +23,7 @@
 		</figcaption>
 	</figure>
 
-</div>-->
+</div>
 <div class="services row row-content_column" >
 	
 	<figure id="design" class="service-container row-content">
@@ -37,7 +48,7 @@
 		</figcaption>
 	</figure>
 
-</div>
+</div>-->
 <script>
 	$(window).scroll(function()	{
 		$('#parallax-banner').css({"background-position-y": "-"+$(this).scrollTop()*2+"px"});
