--- a/src/scss/layouts/_service.scss
+++ b/src/scss/layouts/_service.scss
@@ -10,12 +10,31 @@
     @extend %flex;
     @extend %flex-end;
 }
+
 h2.service-title{
     color: #fafafa;
     width: 80%;
     margin: 0 auto;
+    font-size: 2.2em;
+    padding-bottom: 1rem;
 }
+.services {
+    width: 70%;
+    margin: 5rem auto;
+    @extend %flex;
+    @extend %flex-row;
+    justify-content: space-between;
+}
+
 .service-container {
+    width: 30%;
+    margin-bottom: 2rem;
+}
+
+.service-img {
+    margin-bottom: 1rem;
+}
+/*.service-container {
     overflow: hidden;
     padding: 7rem 0;
 }
@@ -30,7 +49,7 @@ h2.service-title{
     @extend %flex-center;
     //justify-content: center;
     //align-items: center;
-}
+}*/
 /*.services .service-container:nth-child(odd) .description-service {
     padding-left: 4rem;
 }
@@ -43,7 +62,7 @@ h2.service-title{
     order: 0;
 }*/
 
-.services .service-container:nth-child(even) .img-service {
+/*.services .service-container:nth-child(even) .img-service {
     position: relative;
     top: 0;
     right: -100px;
@@ -63,9 +82,9 @@ h2.service-title{
 }
 .services .service-container:nth-child(even):hover .img-service {
     right: -20px;
-}
+}*/
 /**********************************************************************/
-.description-service h3, .description-service p {
+/*.description-service h3, .description-service p {
     //margin: 0 auto;
     width: 80%;
 }
@@ -82,4 +101,10 @@ h2.service-title{
     line-height: 1.8;
     margin-top: 2rem;
     font-size: 1.1em;
+}*/
+
+@media screen and (max-width: 420px) {
+    .service-container {
+        width: 100%;
+    }   
 }
