comportamiento header, modal de servicios

--- a/public/partials/common/header.html
+++ b/public/partials/common/header.html
@@ -5,15 +5,13 @@
             <img class="logo-mobile" src="res/img/icon.png" alt="logo"></img>
         </a>
         <div class="menu-wrapper">
-          <div class="hamburger">
-              
-          </div>
+        <div class="hamburger"></div>
         </div>
         <nav class="navbar">
-            <a class="link" ui-sref="/" ui-sref-active="active">Home</a>
-            <a class="link" ui-sref="services" ui-sref-active="active">Services</a>
-            <a class="link" ui-sref="portfolio" ui-sref-active="active">Portfolio</a>
-            <a class="link" ui-sref="contact" ui-sref-active="active">Contact</a>
+            <a class="link" ui-sref="/" ui-sref-active="active">inicio</a>
+            <a class="link" ui-sref="services" ui-sref-active="active">Servicios</a>
+            <a class="link" ui-sref="portfolio" ui-sref-active="active">Portafolio</a>
+            <a class="link" ui-sref="contact" ui-sref-active="active">Contacto</a>
             <i class="fa fa-globe nav-link" aria-hidden="true"></i>
         </nav>
     </div>
