--- a/public/partials/services.html
+++ b/public/partials/services.html
@@ -20,11 +20,14 @@
 		</a>
 	</div>
 </div>
-<!--<style>
-	.header {
-		background-color: rgba(250, 250, 250, .8)
+<style>
+	a.link{
+		color: #fff;	
 	}
-</style>-->
+	a.link:hover {
+		color: rgba(250, 250, 250, .8);	
+	}
+</style>
 <!--
 
 <script src="res/js/jquery.nicescroll.min.js"></script>
