--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -101,14 +101,14 @@ function scaleBannerVideoSize(element){
     <div class="wedo-wrapper">
         <div class="service-description">
             <div class="service-description-container">
-                <h3>Graphic Design</h3>
+                <h3>Diseño Gráfico</h3>
                 <p class="paragraph">
                     En B-markt, sabemos que comunicar la personalidad de una marca gráficamente es una tarea que debe ser gestionada cuidadosamente. Conocer y explotar el potencial del mensaje que se desea comunicar, es la tarea del equipo especialista que desarrolla tus conceptos en: identidad corporativa (logotipo y marca), papelería, cartelería, expresiones editoriales, diseño publicitario y web.
                 </p>
             </div>
         </div>
         <figure class="wedo-fig ribon-left">
-            <img class="wedo-fig_img" src="res/img/Captura.jpg" alt="Design">
+            <img class="wedo-fig_img" src="res/img/services-home/diseno2.png" alt="Design">
             <figcaption class="wedo-fig_cap">
                 <a href="" ui-sref="service({service: 'design'})"></a>
             </figcaption>
@@ -116,14 +116,14 @@ function scaleBannerVideoSize(element){
     </div>
     <div class="wedo-wrapper">
         <figure class="wedo-fig ribon-right">
-            <img class="wedo-fig_img" src="res/img/Captura.jpg" alt="Development">
+            <img class="wedo-fig_img" src="res/img/services-home/desarrollo.png" alt="Development">
             <figcaption class="wedo-fig_cap">
                 <a href="" ui-sref="service({service: 'development'})"></a>
             </figcaption>
         </figure>
         <div class="service-description">
             <div class="service-description-container">
-                <h3 class="text-right">Development</h3>
+                <h3 class="text-right">Desarrollo Web</h3>
                 <p class="paragraph">
                     La tecnología está a tu alcance y hacerla a un lado no es una opción. Porque el crecimiento de tu negocio se basa en la rapidez de gestión, creemos que la optimización y automatización de procesos mediante nuestros softwares son la solución práctica para potenciarte en el mercado. Estas soluciones son: sistemas de inventario, de contabilidad, páginas web, aplicaciones móviles, y plataformas de comercio electrónico.
                 </p>
@@ -133,14 +133,14 @@ function scaleBannerVideoSize(element){
     <div class="wedo-wrapper">
         <div class="service-description">
             <div class="service-description-container">
-                <h3>Marketing</h3>
+                <h3>Marketing Digital</h3>
                 <p class="paragraph">
                     En Bmarkt creemos que establecer relaciones de valor duraderas entre el cliente y la empresa es vital para el éxito empresarial. Esto es posible mediante el conocimiento sistemático del cliente y por las herramientas digitales que se facilitan: investigaciones de mercado digital, dirección y organización de campañas de comunicación, posicionamiento de sitios web SEO y SEM, CRM, y Social Media.
                 </p>
             </div>
         </div>
         <figure class="wedo-fig ribon-left">
-            <img class="wedo-fig_img" src="res/img/Captura.jpg" alt="Marketing">
+            <img class="wedo-fig_img" src="res/img/services-home/marketing1.png" alt="Marketing">
             <figcaption class="wedo-fig_cap">
                 <a href="" ui-sref="service({service: 'marketing'})"></a>
             </figcaption>
@@ -148,14 +148,14 @@ function scaleBannerVideoSize(element){
     </div>
     <div class="wedo-wrapper">
         <figure class="wedo-fig ribon-right">
-            <img class="wedo-fig_img" src="res/img/Captura.jpg" alt="Architecture">
+            <img class="wedo-fig_img" src="res/img/services-home/arquitect2.png" alt="Architecture">
             <figcaption class="wedo-fig_cap">
                 <a href="" ui-sref="service({service: 'architecture'})"></a>
             </figcaption>s
         </figure>
         <div class="service-description">
             <div class="service-description-container">
-                <h3 class="text-right">Architecture</h3>
+                <h3 class="text-right">Arquitectura</h3>
                 <p class="paragraph">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Itaque dolores illum ab laudantium ipsam, quia non,
