--- a/public/partials/portfolio.html
+++ b/public/partials/portfolio.html
@@ -97,10 +97,13 @@
 <div id="modal-container" class="modal-container">
     <div class="modal-flex-wrapper flex-center">
 		<div class="moda-contento">
+
 			<div class="work-img"></div>
+			
+			<div class="modal-close"> X </div>
+			
 			<div class="work-detail">
 				<div class="work-detail-container">
-					<span class="close"> X </span>
 					<h3>TITLE</h3>
 					<div>
 						<a href="">UI/UX</a>
@@ -111,6 +114,7 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quaerat distinctio ipsam, itaque laboriosam iure voluptate minus neque ea, quia officia nobis harum, voluptas ut qui quisquam, vitae esse sequi.</p>
 				</div>
 			</div>
+		
 		</div>
     </div>
 </div>
