--- a/public/res/css/styles.css
+++ b/public/res/css/styles.css
@@ -634,6 +634,9 @@ main {
 .logo {
   width: 170px; }
 
+.logo-white {
+  content: url("../img/iconBR.png"); }
+
 a.active {
   color: #333; }
 
@@ -832,7 +835,8 @@ a.active {
   margin-top: -91px;
   background-image: url("../img/banner.png");
   background-repeat: no-repeat;
-  background-size: 100% 100%; }
+  background-size: 100% 100%;
+  background-color: #373737; }
   .banner img {
     width: 40%;
     height: auto; }
@@ -990,7 +994,7 @@ hr {
 
 h2.service-title {
   color: #fafafa;
-  width: 80%;
+  width: 70%;
   margin: 0 auto;
   font-size: 2.2em;
   padding-bottom: 1rem; }
@@ -1286,12 +1290,33 @@ a.is-checked, a.is-checked:hover {
 .work-img {
   background-image: url("../img/work.jpg"); }
 
-.close {
-  position: relative;
+.modal-close {
+  /*position: relative;
   top: 0;
-  right: 0;
-  width: 50px;
-  height: 50px;
+  right: 0;*/
+  /*width: 50px;
+  height: 50px;*/
   background-color: #FF5252; }
+
+@media screen and (max-width: 420px) {
+  .moda-contento {
+    flex-flow: column;
+    width: 100%;
+    height: 100%; }
+
+  .work-img, .work-detail {
+    width: 100%; }
+
+  .work-img {
+    height: 60vh; }
+
+  .work-detail {
+    width: 90%;
+    margin: 0 auto; }
+
+  .modal-close {
+    height: 70px;
+    width: 70px;
+    border-radius: 50%; } }
 
 /*# sourceMappingURL=styles.css.map */
