banner responsive, menu responsive issues, google verification

--- a/public/partials/common/header.html
+++ b/public/partials/common/header.html
@@ -8,7 +8,7 @@
         <div class="hamburger"></div>
         </div>
         <nav class="navbar">
-            <a class="link" ui-sref="/" ui-sref-active="active">inicio</a>
+            <a class="link" ui-sref="/" ui-sref-active="active">Inicio</a>
             <a class="link" ui-sref="services" ui-sref-active="active">Servicios</a>
             <a class="link" ui-sref="portfolio" ui-sref-active="active">Portafolio</a>
             <a class="link" ui-sref="contact" ui-sref-active="active">Contacto</a>
