--- a/public/partials/portfolio.html
+++ b/public/partials/portfolio.html
@@ -4,7 +4,7 @@
 		$('#modal-container').fadeIn();
 		//console.log($(this).index())
 	});
-	$('.close').click(function(){
+	$('.modal-close').click(function(){
 		$('#modal-container').fadeOut();
 	});
 	var elementItem = $('.element-item');
@@ -15,7 +15,7 @@
 <div class="row">
     <div class="portfolio row-content row-content_medium row-content_column row-content-center_vertical">
         <h2 class="text-center">PORTFOLIO</h2>
-	
+		
 		<div id="filters" class="button-group flex flex--row flex--center__horizontal">  
           <a  herf="" class="isotope is-checked" data-filter="*">Todos</a>
           <a herf="" class="isotope" data-filter=".web">web</a>
@@ -28,7 +28,7 @@
 			<figure class="element-item design">
 			  <img class="lin" src="res/img/Captura.jpg" alt="img-porfolio">
 			  <figcaption class="element-info">
-			  	<h4>Work title</h4>
+			  	<h4><a data-ui-sref="portfolio.work">Work title</a></h4>
 			  	<span>
 			  		Web Design, front-end, UI/UX
 			  	</span>
@@ -96,8 +96,9 @@
 
 <div id="modal-container" class="modal-container">
     <div class="modal-flex-wrapper flex-center">
-		<div class="moda-contento">
-
+		<div class="moda-contento"> <!--ui-view="work"-->
+			
+			<!--<portfolio-work></portfolio-work>-->
 			<div class="work-img"></div>
 			
 			<div class="modal-close"> X </div>
