--- a/public/res/css/styles.css
+++ b/public/res/css/styles.css
@@ -787,61 +787,16 @@ a.active {
 
   .navbar-mobile {
     left: 0; } }
-/*.homepage-hero-module {
-    border-right: none;
-    border-left: none;
-    position: relative;
-}
-.no-video .video-container video,
-.touch .video-container video {
-    display: none;
-}
-.no-video .video-container .poster,
-.touch .video-container .poster {
-    display: block !important;
-}
-.video-container {
-    position: relative;
-    bottom: 0%;
-    left: 0%;
-    height: 100vh;
-    width: 100%;
-    overflow: hidden;
-    background: #000;
-}
-.video-container .poster img {
-    width: 100%;
-    bottom: 0;
-    position: absolute;
-}
-.hidden {
-	display: none;
-}
-.video-container .filter {
-    z-index: 100;
-    position: absolute;
-    background: rgba(0, 0, 0, 0.4);
-    width: 100%;
-}
-.video-container video {
-    position: absolute;
-    z-index: 0;
-    bottom: 0;
-}
-.video-container video.fillWidth {
-    width: 100%;
-}*/
 .banner {
   margin-top: -91px;
-  background-image: url("../img/banner.png");
-  background-repeat: no-repeat;
   background-size: 100% 100%;
-  background-color: #373737; }
-  .banner img {
-    width: 40%;
-    height: auto; }
-  .banner h1 {
-    width: 50%; }
+  /*img {
+  	width: 40%;
+  	height: auto;
+  }
+  h1 {
+  	width: 50%;
+  }*/ }
 
 .about {
   margin: 7rem 0; }
@@ -865,7 +820,10 @@ hr {
 
 @media screen and (max-width: 420px) {
   .about {
-    width: 95%; } }
+    width: 95%; }
+
+  .banner {
+    margin-top: 0; } }
 .wedo {
   flex-direction: row;
   flex-wrap: wrap;
@@ -1217,16 +1175,16 @@ a.is-checked, a.is-checked:hover {
 
 .map-btn {
   vertical-align: bottom;
-  border: 1px solid #FF5252;
+  border: 1px solid #E7302A;
   padding: 1em;
-  color: #FF5252;
+  color: #E7302A;
   text-align: center !important;
   cursor: pointer;
   width: 80% !important;
   margin-top: 1rem; }
 
 .map-btn:hover {
-  background-color: #FF5252;
+  background-color: #E7302A;
   color: #fff; }
 
 .social-icon {
