--- a/src/scss/layouts/_about.scss
+++ b/src/scss/layouts/_about.scss
@@ -1,66 +1,18 @@
-/*.homepage-hero-module {
-    border-right: none;
-    border-left: none;
-    position: relative;
-}
-.no-video .video-container video,
-.touch .video-container video {
-    display: none;
-}
-.no-video .video-container .poster,
-.touch .video-container .poster {
-    display: block !important;
-}
-.video-container {
-    position: relative;
-    bottom: 0%;
-    left: 0%;
-    height: 100vh;
-    width: 100%;
-    overflow: hidden;
-    background: #000;
-}
-.video-container .poster img {
-    width: 100%;
-    bottom: 0;
-    position: absolute;
-}
-.hidden {
-	display: none;
-}
-.video-container .filter {
-    z-index: 100;
-    position: absolute;
-    background: rgba(0, 0, 0, 0.4);
-    width: 100%;
-}
-.video-container video {
-    position: absolute;
-    z-index: 0;
-    bottom: 0;
-}
-.video-container video.fillWidth {
-    width: 100%;
-}*/
-
-
-
-
 .banner {
 	margin-top: -91px;
 	background: {
-		image: url('../img/banner.png');
-		repeat: no-repeat;
+		//image: url('../img/banner.png');
+		//repeat: no-repeat;
 		size: 100% 100%;
-		color: rgb(55,55,55);
+		//color: rgb(55,55,55);
 	}
-	img {
+	/*img {
 		width: 40%;
 		height: auto;
 	}
 	h1 {
 		width: 50%;
-	}
+	}*/
 }
 
 
@@ -91,5 +43,8 @@ hr {
 @media screen and (max-width: 420px) {
 	.about {
 		width: 95%;
+	}
+	.banner {
+		margin-top: 0;
 	}
 }
