--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -86,16 +86,16 @@
 
 .map-btn {
 	vertical-align: bottom;
-	border: 1px solid $accent-color;
+	border: 1px solid #E7302A;
 	padding: 1em;
-	color: $accent-color;
+	color: #E7302A;
 	text-align: center !important;
 	cursor: pointer;
 	width: 80% !important;
 	margin-top: 1rem;
 }
 .map-btn:hover {
-	background-color: $accent-color;
+	background-color: #E7302A;
 	color: $white;
 }
 .social {
