agregado architect description

--- a/public/partials/common/footer.html
+++ b/public/partials/common/footer.html
@@ -14,9 +14,9 @@
                 <a ui-sref="contact" ui-sref-active="active">Contact</a>
             </div>
             <div class="contact-info">
-                <span><i class="fa fa-globe" aria-hidden="true"></i> bmarkt@studio.com</span>
-                <span><i class="fa fa-globe" aria-hidden="true"></i> (+505) 5808 2679</span>
-                <span><i class="fa fa-globe" aria-hidden="true"></i> <p>Supermercado la colonia 5 1/2 cuadras norte</p></span>
+                <span><i class="fa fa-envelope-o" aria-hidden="true"></i>bmarkt@studio.com</span>
+                <span><i class="fa fa-mobile-phone fa-lg" aria-hidden="true"></i>(+505) 5808 2679</span>
+                <span><i class="fa fa-map-marker" aria-hidden="true"></i><p>Supermercado la colonia 5 1/2 cuadras norte</p></span>
                 <span><i class="fa fa-globe" aria-hidden="true"></i> Estelí - Nicaragua</span>
                 <div class="map-btn map-toggler_open">VER MAPA</div>
             </div>
