--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -80,11 +80,7 @@
             <div class="service-description-container">
                 <h3 class="text-right">Arquitectura</h3>
                 <p class="paragraph">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Itaque dolores illum ab laudantium ipsam, quia non,
-                    aspernatur exercitationem pariatur labore odit quidem
-                    officia eius expedita deserunt, beatae culpa sapiente
-                    perferendis.
+                    Conocemos la importancia de satisfacer las necesidades de infraestructura, para el desarrollo laboral, personal y familiar en la sociedad, a través de servicios integrales de arquitectura, generando espacios inteligentes, confortables y visualmente agradables, fieles a las preferencias y necesidades del cliente.
                 </p>
             </div>
         </div>
