some fixin, color header, white body

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -96,11 +96,11 @@
           loop: true
         });
     });
-    $(window).scroll(function() {
+    /*$(window).scroll(function() {
         if( $(window).scrollTop() >= $('.banner').height()){
             $('.header').css('background-color', '#fafafa');
         } else {
             $('.header').css('background-color', 'transparent');                
         }
-    });
+    });*/
 </script>
