--- a/public/partials/common/footer.html
+++ b/public/partials/common/footer.html
@@ -8,14 +8,14 @@
                 <img src="res/img/logoRB.png" alt="">
             </div>
             <div class="footer-nav">                
-                <a ui-sref="/" ui-sref-active="active">Home</a>
+                <a ui-sref="/" ui-sref-active="active" class="active">Home</a>
                 <a ui-sref="services" ui-sref-active="active">Services</a>
                 <a ui-sref="portfolio" ui-sref-active="active">Portfolio</a>
                 <a ui-sref="contact" ui-sref-active="active">Contact</a>
             </div>
             <div class="contact-info">
-                <span><i class="fa fa-envelope-o" aria-hidden="true"></i>bmarkt@studio.com</span>
-                <span><i class="fa fa-mobile-phone fa-lg" aria-hidden="true"></i>(+505) 5808 2679</span>
+                <span><i class="fa fa-envelope-o" aria-hidden="true"></i>contacto@bmarkt.studio</span>
+                <span><i class="fa fa-mobile-phone fa-lg" aria-hidden="true"></i>(+505) 8853 9870</span>
                 <span><i class="fa fa-map-marker" aria-hidden="true"></i><p>Supermercado la colonia 5 1/2 cuadras norte</p></span>
                 <span><i class="fa fa-globe" aria-hidden="true"></i> Estelí - Nicaragua</span>
                 <div class="map-btn map-toggler_open">VER MAPA</div>
@@ -35,41 +35,28 @@
     </div>
 </footer>
 <script>
-       /* var width = $(window).width();
-        if (width <= 420) {
-            $('.navbar').addClass('responsiveMenu');
-        }
-        $(window).on('resize', function() {
-            var width = $(window).width();
-            if (width <= 420) {
-                $('.navbar').addClass('responsiveMenu');
-            } else {
-                $('.navbar').removeClass('responsiveMenu');                
-            }
-        });*/
 
-        $('.map-toggler_open').click(function(){
-            $('.footer-container').fadeOut();
-            $(this).fadeOut();
-            $('.map-toggler_close').fadeIn();//.css('display', 'block');
+    $('.map-toggler_open').click(function(){
+        $('.footer-container').fadeOut();
+        $(this).fadeOut();
+        $('.map-toggler_close').fadeIn();//.css('display', 'block');
 
-        });
-        
-        $('.map-toggler_close').click(function(){
-            $('.footer-container').fadeIn();
-            $(this).fadeOut();
-            $('.map-toggler_open').fadeIn();//.css('display', 'block');
-        });
-        
+    });
+    
+    $('.map-toggler_close').click(function(){
+        $('.footer-container').fadeIn();
+        $(this).fadeOut();
+        $('.map-toggler_open').fadeIn();//.css('display', 'block');
+    });      
 
 
-        /*$('.menu-wrapper').click(function() {
-            $('.view-container').toggleClass("blur");
-            $('footer').toggleClass("blur");
-        });
-        $('.responsiveMenu .link').click(function() {
-            $('.view-container').toggleClass("blur");
-            $('footer').toggleClass("blur");
-        });*/
+    /*$('.menu-wrapper').click(function() {
+        $('.view-container').toggleClass("blur");
+        $('footer').toggleClass("blur");
+    });
+    $('.responsiveMenu .link').click(function() {
+        $('.view-container').toggleClass("blur");
+        $('footer').toggleClass("blur");
+    });*/
 
     </script>
