--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -8,8 +8,9 @@
     left: 0;
     z-index: 99;
     width: 100vw;
-    //background-color: #fafafa;
+    background-color: #fff;//#fafafa;
     transition: .6s ease all;
+    //box-shadow: 0 0 5px 8px rgba(0, 0, 0, .3);
     #{&}-container {
         width: 80%;
         padding-top: 15px;
@@ -24,12 +25,20 @@
 .logo {
     width: 170px;
 }
+.bgt {
+  background-color: transparent;
+  a.link{
+    color: #fff;  
+  }
+  a.link:hover {
+    color: rgba(250, 250, 250, .8); 
+  }  
+}
 .logo-white {
   content: url('../img/iconBR.png');
 }
 .logo-mobile_white {
   content: url('../img/logoRB.png');
-  //height: 96px;  
 }
 .navbar {
    @extend %flex;
