--- a/public/partials/services.html
+++ b/public/partials/services.html
@@ -1,12 +1,12 @@
 <div class="service-wrapper">
 	<div class="service">
 		<a ui-sref="service({service: 'design'})" class="services-container">
-			<h3>DESIGN</h3>
+			<h3>DISEÑO</h3>
 		</a>
 	</div>
 	<div class="service">
 		<a ui-sref="service({service: 'development'})" class="services-container">
-			<h3>DEVELOPMENT</h3>
+			<h3>DESARROLLO</h3>
 		</a>
 	</div>
 	<div class="hello service">
@@ -16,7 +16,7 @@
 	</div>
 	<div class="service">
 		<a ui-sref="service({service: 'architecture'})" class="services-container">
-			<h3>ARCHITECTURE</h3>
+			<h3>ARQUITECTURA</h3>
 		</a>
 	</div>
 </div>
