--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -7,7 +7,7 @@
     top: 0;
     left: 0;
     z-index: 99;
-    width: 100vw;
+    width: 100%;
     background-color: #fff;//#fafafa;
     transition: .6s ease all;
     //box-shadow: 0 0 5px 8px rgba(0, 0, 0, .3);
