--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -22,6 +22,7 @@
 @import 'layouts/_services.scss';
 @import 'layouts/_service.scss';
 @import 'layouts/_portfolio.scss';
+@import 'layouts/_work.scss';
 @import 'layouts/_contact.scss';
 @import 'layouts/_footer.scss';
 @import 'layouts/_modal-project.scss';
