--- a/public/partials/common/footer.html
+++ b/public/partials/common/footer.html
@@ -1,17 +1,17 @@
 <footer class="footer">
     <!--<span class="map-toggler_open"> <i class="fa fa-map" aria-hidden="true"></i> </span>-->
     <span class="map-toggler_close" style="display: none"> <i class="fa fa-map" aria-hidden="true"></i> </span>
-    <iframe class="map-container" src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d1296.8042740418107!2d-86.35661010025788!3d13.097823473313829!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e6!4m0!4m3!3m2!1d13.0980063!2d-86.356329!5e0!3m2!1sen!2s!4v1485989122647" allowfullscreen></iframe> 
+    <!-- <iframe class="map-container" src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d1296.8042740418107!2d-86.35661010025788!3d13.097823473313829!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e6!4m0!4m3!3m2!1d13.0980063!2d-86.356329!5e0!3m2!1sen!2s!4v1485989122647" allowfullscreen></iframe> -->
     <div class="footer-container">            
         <div class="footer-content">
             <div class="logo-icon">
                 <img src="res/img/logoRB.png" alt="">
             </div>
             <div class="footer-nav">                
-                <a ui-sref="/" ui-sref-active="active" class="active">Home</a>
-                <a ui-sref="services" ui-sref-active="active">Services</a>
-                <a ui-sref="portfolio" ui-sref-active="active">Portfolio</a>
-                <a ui-sref="contact" ui-sref-active="active">Contact</a>
+                <a ui-sref="/" ui-sref-active="active" class="active">Inicio</a>
+                <a ui-sref="services" ui-sref-active="active">Servicios</a>
+                <a ui-sref="portfolio" ui-sref-active="active">Portafolio</a>
+                <a ui-sref="contact" ui-sref-active="active">Contacto</a>
             </div>
             <div class="contact-info">
                 <span><i class="fa fa-envelope-o" aria-hidden="true"></i>contacto@bmarkt.studio</span>
@@ -59,4 +59,4 @@
         $('footer').toggleClass("blur");
     });*/
 
-    </script>
+</script>
