--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div  class="contact row-content row-content_medium row-content-center_horizontal">
         <form class="contact-form material-component">
-			<h3 class="form-title text-center">contact us</h3>
+			<h3 class="form-title text-center">Contáctanos</h3>
 			<div class="form-group">
 				<input type="text" class="form-input" placeholder="name" data-ng-model="$ctrl.mailObj.name">
 				<!--<span class="input-group-addon" id="sizing-addon1"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></span>-->
@@ -18,7 +18,7 @@
 				<textarea class="form-input" placeholder="message" data-ng-model="$ctrl.mailObj.msj"></textarea>
 			</div>
 			<div class="form-group flex flex-center_horizontal">
-				<button class="btn btn-default form-button" data-ng-click="$ctrl.sendMail()">send</button>
+				<button class="btn btn-default form-button" data-ng-click="$ctrl.sendMail()">enviar</button>
 			</div>
 		</form>
     </div>
