--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -8,14 +8,15 @@
 
 <div class="row">
     <div class="about row-content row-content_medium row-content_column row-content-center_vertical">
-        
-        <div class="logo-red-ball"></div>
+
+        <img src="res/img/Banner1.png" alt="LE BANNER">
+    <!--    <div class="logo-red-ball"></div>
         <hr>
         <p class="info-text text-center">
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 			sed diam nonummy nibh euismod tincidunt ut laoreet dolore
 			magna aliquam erat volutpat.
-        </p>
+        </p>-->
         
     </div>
 </div>
