--- a/public/partials/service.html
+++ b/public/partials/service.html
@@ -1,6 +1,6 @@
 
 <div id="parallax-banner" class="service-banner">
-	<h2 class="service-title">Diseño</h2>
+	<h2 class="service-title">Desarrollo Web</h2>
 </div>
 <div class="services">
 	
