--- a/src/scss/layouts/_about.scss
+++ b/src/scss/layouts/_about.scss
@@ -17,7 +17,9 @@
 
 
 .about {
-	margin: 7rem 0;
+	//margin: 7rem 0;
+	margin-top: 3rem;
+	margin-bottom: 10rem;
 }
 .logo-red-ball {
 	width: 15px;
