--- a/public/partials/services.html
+++ b/public/partials/services.html
@@ -1,21 +1,21 @@
 <div class="service-wrapper">
 	<div class="service">
-		<a ui-sref="service({service: 'design'})" class="services-container">
+		<a ui-sref="service({service: 'design'})" class="services-container" data-ng-click="$parent.serviceTitle = 'DISEÑO' ">
 			<h3>DISEÑO</h3>
 		</a>
 	</div>
 	<div class="service">
-		<a ui-sref="service({service: 'development'})" class="services-container">
+		<a ui-sref="service({service: 'development'})" class="services-container"  data-ng-click="$parent.serviceTitle = 'DESARROLLO' ">
 			<h3>DESARROLLO</h3>
 		</a>
 	</div>
 	<div class="hello service">
-		<a ui-sref="service({service: 'marketing'})" class="services-container">
+		<a ui-sref="service({service: 'marketing'})" class="services-container"  data-ng-click="$parent.serviceTitle = 'MARKETING' ">
 			<h3>MARKETING</h3>
 		</a>
 	</div>
 	<div class="service">
-		<a ui-sref="service({service: 'architecture'})" class="services-container">
+		<a ui-sref="service({service: 'architecture'})" class="services-container"  data-ng-click="$parent.serviceTitle = 'ARQUITECTURA' ">
 			<h3>ARQUITECTURA</h3>
 		</a>
 	</div>
