--- a/public/res/css/styles.css
+++ b/public/res/css/styles.css
@@ -917,7 +917,22 @@ hr {
     margin-bottom: 1rem; }
 
   .service-description-container h3 {
-    text-align: center; } }
+    text-align: center; }
+
+  .wedo-fig:hover .wedo-fig_cap {
+    background-color: rgba(250, 250, 250, 0); }
+  .wedo-fig:hover .wedo-fig_img {
+    transform: scale(1.3); }
+
+  .ribon-left:after, .ribon-right:before {
+    left: calc(50% - 20px);
+    top: calc(100% - 40px); }
+
+  .ribon-right:before {
+    transform: rotate(90deg); }
+
+  .ribon-left:after {
+    transform: rotate(-90deg); } }
 .service-wrapper {
   margin-top: -91px; }
 
@@ -1093,10 +1108,11 @@ a.is-checked, a.is-checked:hover {
   top: 0;
   left: 0;
   height: 100%;
-  color: white;
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 0;
   transition: 1s ease all; }
+  .element-info a {
+    color: white; }
 
 .element-item:hover .element-info {
   opacity: 1; }
@@ -1107,7 +1123,10 @@ a.is-checked, a.is-checked:hover {
 
 @media screen and (max-width: 420px) {
   .element-item {
-    width: 100%; } }
+    width: 100%; }
+
+  .element-info {
+    opacity: 1; } }
 .work {
   flex-wrap: wrap; }
 
