--- a/src/scss/layouts/_portfolio.scss
+++ b/src/scss/layouts/_portfolio.scss
@@ -50,10 +50,10 @@ a.is-checked, a.is-checked:hover{
 	top: 0;
 	left: 0;
 	height: 100%;
-	color: white;
 	background-color: rgba(0,0,0,.5);
 	opacity: 0;
 	transition: 1s ease all;
+	a { color: white; }
 	@extend %flex;
 	@extend %flex-center;
 	@extend %flex-column;
@@ -69,5 +69,9 @@ a.is-checked, a.is-checked:hover{
 @media screen and (max-width: 420px) {
 	.element-item {
 		width: 100%;
+	}
+
+	.element-info {
+		opacity: 1;
 	}
 }
