--- a/src/scss/layouts/_wedo.scss
+++ b/src/scss/layouts/_wedo.scss
@@ -102,4 +102,21 @@
     .service-description-container h3 {
         text-align: center;
     }
+
+    .wedo-fig:hover {
+        .wedo-fig_cap {background-color: rgba(250,250,250,0);}
+        .wedo-fig_img {transform: scale(1.3);}
+    }
+
+    .ribon-left:after, .ribon-right:before {
+        left: calc(50% - 20px);
+        top: calc(100% - 40px);
+    }
+
+    .ribon-right:before {
+        transform: rotate(90deg)
+    }
+    .ribon-left:after {
+        transform: rotate(-90deg)
+    }
 }
