--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -106,7 +106,9 @@ a.active {
 .menu-wrapper_white {
   border-color: $white;
 }
-
+.wrapper_white{ 
+  border-color: $white; 
+}
 .hamburger:before,.hamburger:after {
   content: "";
   position: relative;
@@ -118,6 +120,9 @@ a.active {
   height: 0;
   border-top: 1px solid black;
   transition: .4s ease all;
+}
+.hamburger_white, .hamburger_white:before,.hamburger_white:after {
+  border-top: 1px solid $white;
 }
 .hamburger:before {
   bottom: -8px;
